Changes between 0.1.2 and 0.1.3
===============================
- Feature additions/changes:
  - The settings screen now displays the entered values.
  - File chooser now shows files sorted alphabetically.
  - File chooser remembers the last directory from which a file was sucessfully
    opened.
  - For translators: Headers in the .pot file are now generated to contain
    usable information rather than standard strings.
  - It is now possible to jump directly to a specific string number.
- Bug fixes:
  - Fixed: Crash on opening file with empty language code in header
- Translations:
  - New Spanish translation
  - New German translation

Changes between 0.1.1 and 0.1.2
===============================

- Bug fixes:
  - Empty msgid was not written for header
  - Translator comments were written with prefix "#  " (two spaces), where only
    "# " (one space) is accepted.
  - Short strings with newline characters were not correctly surrounded by
    double quotes.
- Updated translations:
  - Esperanto

Changes between 0.1 and 0.1.1
=============================

- Bug fixes:
  - "fuzzy" was not removed from header
  - Double quotes inside strings were not escaped
- New translations:
  - Brazilian Portuguese
  - Dutch
  - Esperanto
  - Ukranian
  - Vietnamese

Version 0.1
===========

Initial release.