@@ -13,9 +13,15 @@
 
     <application
         android:allowBackup="true"
+        android:backupAgent="eu.pryds.ve.VeBackupAgent"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.Light" >
+        
+        <meta-data
+            android:name="com.google.android.backup.api_key"
+            android:value="AEdPqrEAAAAILlof6VZJzaJUtfLSNUh6Add5cYguHu2b6I5K-Q" />
+        
         <activity
             android:name="eu.pryds.ve.MainActivity"
             android:label="@string/app_name" >
