@@ -1,5 +1,6 @@
 package eu.pryds.ve;
 
+import android.app.backup.BackupManager;
 import android.os.Bundle;
 import android.preference.PreferenceFragment;
 
@@ -10,5 +11,13 @@ public class SettingsFragment extends PreferenceFragment {
 
         // Load the preferences from an XML resource
         addPreferencesFromResource(R.xml.preferences);
+    }
+	
+	@Override
+    public void onStop() {
+        super.onStop();
+        
+        // Request backup, data might have changed.
+        BackupManager.dataChanged(MainActivity.PREFS_NAME);
     }
 }
