@@ -12,7 +12,6 @@ import android.content.SharedPreferences;
 import android.content.pm.PackageManager.NameNotFoundException;
 import android.os.Parcel;
 import android.os.Parcelable;
-import android.preference.PreferenceManager;
 
 public class TranslatableString implements Parcelable {
     private String translatorComments;
@@ -74,8 +73,7 @@ public class TranslatableString implements Parcelable {
                 }
             }
         }
-        SharedPreferences pref =
-                PreferenceManager.getDefaultSharedPreferences(activity);
+        SharedPreferences pref = activity.getSharedPreferences(MainActivity.PREFS_NAME, 0);
         return Languages.getNplurals(pref.getString("pref_lang", Languages.DEFAULT_LANG_CODE));
     }
     
@@ -91,8 +89,7 @@ public class TranslatableString implements Parcelable {
             version = activity.getPackageManager().getPackageInfo(
                     activity.getPackageName(), 0).versionName;
         } catch (NameNotFoundException e) { }
-        SharedPreferences pref =
-                PreferenceManager.getDefaultSharedPreferences(activity);
+        SharedPreferences pref = activity.getSharedPreferences(MainActivity.PREFS_NAME, 0);
         
         String[] headerArray = translatedString.get(0).split("\n");
         Vector<String> headerLines = new Vector<String>(Arrays.asList(headerArray));
